--- a/Unreal_FPS/Config/DefaultEngine.ini
+++ b/Unreal_FPS/Config/DefaultEngine.ini
@@ -72,6 +72,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Unreal_FPS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Unreal_FPS")
+NearClipPlane=0.010000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
