--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,20 +235,20 @@ AnimationCurveGroupingDelimiters="._/|\\"
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Aim.IA_Aim
-InputAction=
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Aim.IA_Aim
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeHashSet=
-BP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-SkeletalMeshComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
+BP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+SkeletalMeshComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup
-K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 ABP_Character_C=
-K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 PropertyWrapper=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 
 [ContentBrowser]
@@ -265,7 +265,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Data
+ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Core
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -275,15 +275,15 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Meshes
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Core
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Rigs
 ContentBrowserDrawer.JumpMRU=/All/Game
@@ -337,8 +337,11 @@ AssetDialog.ZoomScale=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
@@ -358,7 +361,8 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 OpenAssetsAtExit=/Game/Unreal_FPS/Data/IMC_FPS.IMC_FPS
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Character.BP_Character
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/ABP_Character.ABP_Character
+OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_AssaultRifle1.BP_AssaultRifle1
+OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_AssaultRifle.BP_AssaultRifle
 
 [DetailPropertyExpansion]
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -369,7 +373,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
@@ -535,6 +539,8 @@ EdGraphNode="\"Object\" "
 AnimGraphNode_BlendListByBool="\"Object\" "
 AnimGraphNode_BlendListBase="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
+ChildActorComponent="\"Object\" "
+StaticMeshComponent="\"Object\" "
 
 [DetailCategories]
 MoviePlayerSettings.Movies=True
@@ -1507,6 +1513,62 @@ PropertyWrapper.DefaultValueCategory=True
 ABP_Character_C.Default=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+BP_Weapon_C.Tick=True
+BP_Weapon_C.Replication=True
+BP_Weapon_C.Rendering=True
+BP_Weapon_C.Collision=True
+BP_Weapon_C.Actor=True
+BP_Weapon_C.Input=True
+BP_Weapon_C.HLOD=True
+BP_Weapon_C.Physics=True
+BP_Weapon_C.Events=True
+ChildActorComponent.Variable=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.ComponentTick=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Cooking=True
+ChildActorComponent.Events=True
+BP_AssaultRifle_C.Tick=True
+BP_AssaultRifle_C.Replication=True
+BP_AssaultRifle_C.Rendering=True
+BP_AssaultRifle_C.Collision=True
+BP_AssaultRifle_C.Actor=True
+BP_AssaultRifle_C.Input=True
+BP_AssaultRifle_C.HLOD=True
+BP_AssaultRifle_C.Physics=True
+BP_AssaultRifle_C.Events=True
+BP_AssaultRifle1_C.Tick=True
+BP_AssaultRifle1_C.Replication=True
+BP_AssaultRifle1_C.Rendering=True
+BP_AssaultRifle1_C.Collision=True
+BP_AssaultRifle1_C.Actor=True
+BP_AssaultRifle1_C.Input=True
+BP_AssaultRifle1_C.HLOD=True
+BP_AssaultRifle1_C.Physics=True
+BP_AssaultRifle1_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Mesh Painting=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+PropertyWrapper.Events=True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -3132,23 +3194,26 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unreal_FPS/Core/ABP_Character
-MRUItem1=/Game/Unreal_FPS/Core/BP_Character
-MRUItem2=/Game/Unreal_FPS/Data/IMC_FPS
-MRUItem3=/Game/Unreal_FPS/Data/IA_Run
-MRUItem4=/Game/Unreal_FPS/Data/IA_Camera
-MRUItem5=/Game/Unreal_FPS/Data/IA_Movement
-MRUItem6=/Game/Unreal_FPS/Core/GM_FPS
-MRUItem7=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
-MRUItem8=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
-MRUItem9=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
-MRUItem10=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
-MRUItem11=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
-MRUItem12=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
-MRUItem13=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Fire
-MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Reload
-MRUItem15=/Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin
-MRUItem16=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
+MRUItem0=/Game/Unreal_FPS/Core/BP_AssaultRifle1
+MRUItem1=/Game/Unreal_FPS/Core/BP_AssaultRifle
+MRUItem2=/Game/Unreal_FPS/Core/BP_Weapon
+MRUItem3=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem4=/Game/Unreal_FPS/Core/BP_Character
+MRUItem5=/Game/Unreal_FPS/Data/IMC_FPS
+MRUItem6=/Game/Unreal_FPS/Data/IA_Run
+MRUItem7=/Game/Unreal_FPS/Data/IA_Camera
+MRUItem8=/Game/Unreal_FPS/Data/IA_Movement
+MRUItem9=/Game/Unreal_FPS/Core/GM_FPS
+MRUItem10=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
+MRUItem11=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
+MRUItem12=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
+MRUItem13=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
+MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
+MRUItem15=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
+MRUItem16=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Fire
+MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Reload
+MRUItem18=/Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin
+MRUItem19=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
 
 [AssetEditorToolkitTabLocation]
 /Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin.SKEL_UE5_Mannequin=0
@@ -3165,6 +3230,8 @@ MRUItem16=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
 /Game/Unreal_FPS/Data/IA_Camera.IA_Camera=1
 /Game/Unreal_FPS/Data/IA_Run.IA_Run=1
 /Game/Unreal_FPS/Core/ABP_Character.ABP_Character=0
+/Game/Unreal_FPS/Core/BP_Weapon.BP_Weapon=0
+/Game/Unreal_FPS/Core/BP_AssaultRifle1.BP_AssaultRifle1=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
@@ -3367,8 +3434,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3402,4 +3469,7 @@ PreserveScaleRatio=True
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
