Add Procedural Crouching

--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -242,14 +242,17 @@ BP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformC
 SkeletalMeshComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup
 K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
-K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 ABP_Character_C=
 K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
-PropertyWrapper=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+PropertyWrapper=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+AnimGraphNode_Fabrik=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+AnimGraphNode_ModifyBone=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+AnimGraphNode_BlendListByBool=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -265,7 +268,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Core
+ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -339,10 +342,10 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -361,8 +364,8 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 OpenAssetsAtExit=/Game/Unreal_FPS/Data/IMC_FPS.IMC_FPS
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Character.BP_Character
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_AssaultRifle1.BP_AssaultRifle1
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_AssaultRifle.BP_AssaultRifle
+OpenAssetsAtExit=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose.A_FP_AssaultRifle_Idle_Pose
+OpenAssetsAtExit=/Game/Unreal_FPS/Core/ABP_Character.ABP_Character
 
 [DetailPropertyExpansion]
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -373,7 +376,7 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
@@ -541,6 +544,13 @@ AnimGraphNode_BlendListBase="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 ChildActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
+BoneProxy="\"Object\" "
+AnimGraphNode_ModifyBone="\"Object\" "
+AnimGraphNode_SkeletalControlBase="\"Object\" "
+AnimGraphNode_LocalToComponentSpace="\"Object\" "
+AnimGraphNode_ComponentToLocalSpace="\"Object\" "
+AnimGraphNode_Root="\"Object\" "
+AnimGraphNode_Fabrik="\"Object\" "
 
 [DetailCategories]
 MoviePlayerSettings.Movies=True
@@ -1569,6 +1579,31 @@ StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
 StaticMeshComponent.Materials=True
 PropertyWrapper.Events=True
+AnimGraphNode_ModifyBone.Functions=True
+AnimGraphNode_ModifyBone.SkeletalControl=True
+AnimGraphNode_ModifyBone.Translation=True
+AnimGraphNode_ModifyBone.Tag=True
+AnimGraphNode_ModifyBone.Rotation=True
+AnimGraphNode_ModifyBone.Scale=True
+AnimGraphNode_ModifyBone.Performance=True
+AnimGraphNode_ModifyBone.Alpha=True
+AnimGraphNode_ModifyBone.Bindings=True
+AnimGraphNode_LocalToComponentSpace.Functions=True
+AnimGraphNode_LocalToComponentSpace.Tag=True
+AnimGraphNode_LocalToComponentSpace.Bindings=True
+AnimGraphNode_ComponentToLocalSpace.Functions=True
+AnimGraphNode_ComponentToLocalSpace.Tag=True
+AnimGraphNode_ComponentToLocalSpace.Bindings=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Root.Bindings=True
+AnimGraphNode_Fabrik.Functions=True
+AnimGraphNode_Fabrik.EndEffector=True
+AnimGraphNode_Fabrik.Solver=True
+AnimGraphNode_Fabrik.Tag=True
+AnimGraphNode_Fabrik.Performance=True
+AnimGraphNode_Fabrik.Alpha=True
+AnimGraphNode_Fabrik.Bindings=True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -3194,26 +3229,27 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unreal_FPS/Core/BP_AssaultRifle1
-MRUItem1=/Game/Unreal_FPS/Core/BP_AssaultRifle
-MRUItem2=/Game/Unreal_FPS/Core/BP_Weapon
-MRUItem3=/Game/Unreal_FPS/Core/ABP_Character
-MRUItem4=/Game/Unreal_FPS/Core/BP_Character
-MRUItem5=/Game/Unreal_FPS/Data/IMC_FPS
-MRUItem6=/Game/Unreal_FPS/Data/IA_Run
-MRUItem7=/Game/Unreal_FPS/Data/IA_Camera
-MRUItem8=/Game/Unreal_FPS/Data/IA_Movement
-MRUItem9=/Game/Unreal_FPS/Core/GM_FPS
-MRUItem10=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
-MRUItem11=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
-MRUItem12=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
-MRUItem13=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
-MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
-MRUItem15=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
-MRUItem16=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Fire
-MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Reload
-MRUItem18=/Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin
-MRUItem19=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
+MRUItem0=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
+MRUItem1=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem2=/Game/Unreal_FPS/Core/BP_AssaultRifle1
+MRUItem3=/Game/Unreal_FPS/Core/BP_AssaultRifle
+MRUItem4=/Game/Unreal_FPS/Core/BP_Weapon
+MRUItem5=/Game/Unreal_FPS/Core/BP_Character
+MRUItem6=/Game/Unreal_FPS/Data/IMC_FPS
+MRUItem7=/Game/Unreal_FPS/Data/IA_Run
+MRUItem8=/Game/Unreal_FPS/Data/IA_Camera
+MRUItem9=/Game/Unreal_FPS/Data/IA_Movement
+MRUItem10=/Game/Unreal_FPS/Core/GM_FPS
+MRUItem11=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
+MRUItem12=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
+MRUItem13=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
+MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
+MRUItem15=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
+MRUItem16=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
+MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Fire
+MRUItem18=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Reload
+MRUItem19=/Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin
+MRUItem20=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
 
 [AssetEditorToolkitTabLocation]
 /Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin.SKEL_UE5_Mannequin=0
@@ -3232,6 +3268,7 @@ MRUItem19=/Game/Unreal_FPS/Art/Mannequins/Meshes/SK_FP_Manny_Simple
 /Game/Unreal_FPS/Core/ABP_Character.ABP_Character=0
 /Game/Unreal_FPS/Core/BP_Weapon.BP_Weapon=0
 /Game/Unreal_FPS/Core/BP_AssaultRifle1.BP_AssaultRifle1=0
+/Game/Unreal_FPS/Core/BP_AssaultRifle.BP_AssaultRifle=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
