Add Clipping Weapon

--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -247,12 +247,14 @@ K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-ABP_Character_C=
+ABP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 PropertyWrapper=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 AnimGraphNode_Fabrik=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 AnimGraphNode_ModifyBone=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 AnimGraphNode_BlendListByBool=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+AnimGraphNode_Base=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+AnimGraphNode_SequencePlayer=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -371,9 +373,9 @@ OpenAssetsAtExit=/Game/Unreal_FPS/Core/ABP_Character.ABP_Character
 MassSettings="\"Object\" \"Object.Mass\" "
 DeveloperSettings="\"Object\" "
 Object="\"Object\" "
-EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
-AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
+EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
+AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
+CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
@@ -536,21 +538,79 @@ ABP_Character_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
-AnimGraphNode_Base="\"Object\" "
-K2Node="\"Object\" "
-EdGraphNode="\"Object\" "
+AnimGraphNode_Base="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
+K2Node="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
+EdGraphNode="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
 AnimGraphNode_BlendListByBool="\"Object\" "
 AnimGraphNode_BlendListBase="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 ChildActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
 BoneProxy="\"Object\" "
-AnimGraphNode_ModifyBone="\"Object\" "
-AnimGraphNode_SkeletalControlBase="\"Object\" "
+AnimGraphNode_ModifyBone="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
+AnimGraphNode_SkeletalControlBase="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
 AnimGraphNode_LocalToComponentSpace="\"Object\" "
 AnimGraphNode_ComponentToLocalSpace="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_Fabrik="\"Object\" "
+EditorStyleSettings="\"Object\" "
+SlateThemeManager="\"Object\" "
+AudioEditorSettings="\"Object\" "
+BlueprintEditorSettings="\"Object\" "
+CollectionSettings="\"Object\" "
+EnhancedInputEditorSettings="\"Object\" "
+EditorExperimentalSettings="\"Object\" "
+EditorSettings="\"Object\" "
+InterchangeEditorSettings="\"Object\" "
+LiveCodingSettings="\"Object\" "
+EditorPerProjectUserSettings="\"Object\" "
+OutputLogSettings="\"Object\" "
+EditorPerformanceSettings="\"Object\" "
+InternationalizationSettingsModel="\"Object\" "
+SourceCodeAccessSettings="\"Object\" "
+TextureEncodingUserSettings="\"Object\" "
+TextureImportUserSettings="\"Object\" "
+VRModeSettings="\"Object\" "
+VISettings="\"Object\" "
+WorldPartitionEditorSettings="\"Object\" "
+WorldPartitionEditorPerProjectUserSettings="\"Object\" "
+LevelEditorMiscSettings="\"Object\" "
+LevelEditorPlaySettings="\"Object\" "
+OnlinePIESettings="\"Object\" "
+LevelEditorViewportSettings="\"Object\" "
+AnimGraphSettings="\"Object\" "
+AnimationBlueprintEditorSettings="\"Object\" "
+PersonaOptions="\"Object\" "
+ContentBrowserSettings="\"Object\" "
+ControlRigEditorSettings="\"Object\" "
+RigVMEditorSettings="\"Object\" "
+CurveEditorSettings="\"Object\" "
+SequencerSettings="\"Object\" "
+FlipbookEditorSettings="\"Object\" "
+GraphEditorSettings="\"Object\" "
+LevelInstanceEditorPerProjectUserSettings="\"Object\" "
+MeshPaintSettings="\"Object\" "
+MetasoundEditorSettings="\"Object\" "
+SkeletalMeshEditorSettings="\"Object\" "
+SpriteEditorSettings="\"Object\" "
+TakeRecorderUserSettings="\"Object\" "
+TileMapEditorSettings="\"Object\" "
+TileSetEditorSettings="\"Object\" "
+WidgetDesignerSettings="\"Object\" "
+BlueprintHeaderViewSettings="\"Object\" "
+FractureModeCustomizationSettings="\"Object\" "
+LightMixerEditorSettings="\"Object\" "
+LiveLinkEditorSettings="\"Object\" "
+ModelingToolsModeCustomizationSettings="\"Object\" "
+ModelingComponentsEditorSettings="\"Object\" "
+PythonScriptPluginUserSettings="\"Object\" "
+StateTreeEditorSettings="\"Object\" "
+AutomationTestSettings="\"Object\" "
+CrashReporterSettings="\"Object\" "
+GameplayDebuggerUserSettings="\"Object\" "
+GameplayTagsDeveloperSettings="\"Object\" "
+EditorDataStorageSettings="\"Object\" "
+LogVisualizerSettings="\"Object\" "
 
 [DetailCategories]
 MoviePlayerSettings.Movies=True
@@ -1604,6 +1664,18 @@ AnimGraphNode_Fabrik.Tag=True
 AnimGraphNode_Fabrik.Performance=True
 AnimGraphNode_Fabrik.Alpha=True
 AnimGraphNode_Fabrik.Bindings=True
+EditorKeyboardShortcutSettings.AnimNotifyPanel=True
+EditorKeyboardShortcutSettings.AnimationEditor=True
+EditorKeyboardShortcutSettings.AnimViewportLODCmd=True
+EditorKeyboardShortcutSettings.AnimViewportMenu=True
+EditorKeyboardShortcutSettings.AnimViewportPlayback=True
+EditorKeyboardShortcutSettings.AnimViewportShowCmd=True
+EditorKeyboardShortcutSettings.BlueprintEditor=True
+EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
+EditorKeyboardShortcutSettings.FullBlueprintEditor=True
+EditorKeyboardShortcutSettings.MyBlueprint=True
+EditorKeyboardShortcutSettings.SCSEditorViewport=True
+EditorKeyboardShortcutSettings.SkeletonTree=True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -1727,6 +1799,7 @@ MetaHumanSDKSettings=True
 WmfMediaSettings=True
 EditorStyleSettings=True
 InternationalizationSettingsModel=True
+LevelEditorPlaySettings=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
