Add Idle/Aiming/Walking/Running/Crouching Animations

--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -240,14 +240,14 @@ WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMo
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 BP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 SkeletalMeshComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
-CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup
+CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup
 K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-ABP_Character_C=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+ABP_Character_C=
 K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 PropertyWrapper=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 AnimGraphNode_Fabrik=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -255,8 +255,10 @@ AnimGraphNode_ModifyBone=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.
 AnimGraphNode_BlendListByBool=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 AnimGraphNode_Base=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 AnimGraphNode_SequencePlayer=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
+K2Node_Timeline=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 
 [ContentBrowser]
+ContentBrowserTab1.SelectedPaths=/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -276,17 +278,17 @@ ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
-ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.ThumbnailSize=3
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Meshes
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Core
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Meshes
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Materials
@@ -337,6 +339,51 @@ SequenceBrowser.HiddenColumns=Class
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetDialog.ZoomScale=0
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.IsLocked=False
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.FixedSlotSize0=401
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.ZoomScale=0
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Core
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Meshes
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Data
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Materials
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Textures
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Meshes
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Materials
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Rigs
+ContentBrowserTab1.JumpMRU=/All/Game
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Animations/Quinn
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Animations/Manny
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Animations
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS/Art/Mannequins/Textures
+ContentBrowserTab1.JumpMRU=/Game
+ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequins
+ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequins/Meshes
+ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequins/Animations
+ContentBrowserTab1.JumpMRU=/All/Game/Characters/Mannequins/Animations/Manny
+ContentBrowserTab1.JumpMRU=/All/Game/Characters
+ContentBrowserTab1.JumpMRU=/All/Game/Unreal_FPS
+ContentBrowserTab1.JumpMRU=/All/Game/ThirdPerson
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -344,6 +391,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -538,9 +586,9 @@ ABP_Character_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
-AnimGraphNode_Base="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
-K2Node="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
-EdGraphNode="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
+AnimGraphNode_Base="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
 AnimGraphNode_BlendListByBool="\"Object\" "
 AnimGraphNode_BlendListBase="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
@@ -611,6 +659,9 @@ GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 EditorDataStorageSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
+AnimationRecordingParameters="\"Object\" "
+AnimGraphNode_SaveCachedPose="\"Object\" "
+AnimGraphNode_UseCachedPose="\"Object\" "
 
 [DetailCategories]
 MoviePlayerSettings.Movies=True
@@ -1676,6 +1727,18 @@ EditorKeyboardShortcutSettings.FullBlueprintEditor=True
 EditorKeyboardShortcutSettings.MyBlueprint=True
 EditorKeyboardShortcutSettings.SCSEditorViewport=True
 EditorKeyboardShortcutSettings.SkeletonTree=True
+AnimationRecordingParameters.Options=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+AnimGraphNode_SaveCachedPose.Bindings=True
+AnimGraphNode_UseCachedPose.Functions=True
+AnimGraphNode_UseCachedPose.Tag=True
+AnimGraphNode_UseCachedPose.Bindings=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -3302,8 +3365,8 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
-MRUItem1=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem0=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem1=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
 MRUItem2=/Game/Unreal_FPS/Core/BP_AssaultRifle1
 MRUItem3=/Game/Unreal_FPS/Core/BP_AssaultRifle
 MRUItem4=/Game/Unreal_FPS/Core/BP_Weapon
