--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -116,7 +116,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=156)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -149,6 +149,7 @@ LastExecutedLaunchName=DIMAGDD
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=156)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -243,9 +244,9 @@ SkeletalMeshComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.Tra
 CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
-K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup
+K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
-K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup
+K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 ABP_Character_C=
 K2Node=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
@@ -585,9 +586,9 @@ ABP_Character_C="\"Object\" "
 AnimInstance="\"Object\" "
 AnimGraphNode_SequencePlayer="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
-AnimGraphNode_Base="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
-K2Node="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
-EdGraphNode="\"Object\" \"Object.Settings.Node.AlphaBoolBlend\" "
+AnimGraphNode_Base="\"Object\" "
+K2Node="\"Object\" "
+EdGraphNode="\"Object\" "
 AnimGraphNode_BlendListByBool="\"Object\" "
 AnimGraphNode_BlendListBase="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
