Add Reloading Functionality

--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -251,7 +251,7 @@ Advanced=False
 [DetailCustomWidgetExpansion]
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Reload.IA_Reload
 InputAction=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -307,6 +307,8 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=3
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Core
 ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/EditorResources/FieldNodes
 ContentBrowserDrawer.JumpMRU=/All/EngineData
@@ -316,8 +318,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Chaos
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Meshes
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Textures
@@ -422,6 +422,12 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -431,13 +437,10 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
@@ -449,13 +452,11 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Character.BP_Character
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Bullet.BP_Bullet
+OpenAssetsAtExit=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload.AM_FP_AssaultRifle_Reload
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Weapon.BP_Weapon
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Casing.BP_Casing
+OpenAssetsAtExit=/Game/Unreal_FPS/Core/BPI_Weapon.BPI_Weapon
+OpenAssetsAtExit=/Game/Unreal_FPS/Core/ABP_Character.ABP_Character
 
 [DetailPropertyExpansion]
 MassSettings="\"Object\" \"Object.Mass\" "
@@ -469,15 +470,15 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" \"Object.Mappings.Mappings.Mappings[9]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" \"Object.Mappings.Mappings.Mappings[9]\" "
 InputAction="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
@@ -2005,6 +2006,7 @@ BP_Casing_C.Input=True
 BP_Casing_C.HLOD=True
 BP_Casing_C.Physics=True
 BP_Casing_C.Events=True
+AnimSequence.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 MoviePlayerSettings=True
@@ -3631,36 +3633,36 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unreal_FPS/Core/BP_Bullet
-MRUItem1=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
-MRUItem2=/Game/Unreal_FPS/Core/BP_Weapon
-MRUItem3=/Game/Unreal_FPS/Core/BP_Casing
-MRUItem4=/Game/Unreal_FPS/Core/WBP_PlayerUI
-MRUItem5=/Game/Unreal_FPS/Core/ABP_Character
-MRUItem6=/Game/Unreal_FPS/Core/BP_Character
-MRUItem7=/Game/Unreal_FPS/Core/BP_ChaosCube
-MRUItem8=/Game/Unreal_FPS/Core/FS_MasterField_Bullet
-MRUItem9=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/ABP_AssaultRifle
-MRUItem10=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Fire
-MRUItem11=/Game/Unreal_FPS/Core/BPI_Weapon
-MRUItem12=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire_Aimed
-MRUItem13=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Fire
-MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire
-MRUItem15=/Game/Unreal_FPS/Data/IMC_FPS
-MRUItem16=/Game/Unreal_FPS/Core/BP_AssaultRifle
-MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
-MRUItem18=/Game/Unreal_FPS/Core/BP_AssaultRifle1
-MRUItem19=/Game/Unreal_FPS/Data/IA_Run
-MRUItem20=/Game/Unreal_FPS/Data/IA_Camera
-MRUItem21=/Game/Unreal_FPS/Data/IA_Movement
-MRUItem22=/Game/Unreal_FPS/Core/GM_FPS
-MRUItem23=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
-MRUItem24=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
-MRUItem25=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
-MRUItem26=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
-MRUItem27=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
-MRUItem28=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Fire
-MRUItem29=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Reload
+MRUItem0=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem1=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload
+MRUItem2=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Reload
+MRUItem3=/Game/Unreal_FPS/Core/BPI_Weapon
+MRUItem4=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
+MRUItem5=/Game/Unreal_FPS/Data/IMC_FPS
+MRUItem6=/Game/Unreal_FPS/Core/BP_Bullet
+MRUItem7=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
+MRUItem8=/Game/Unreal_FPS/Core/BP_Weapon
+MRUItem9=/Game/Unreal_FPS/Core/BP_Casing
+MRUItem10=/Game/Unreal_FPS/Core/WBP_PlayerUI
+MRUItem11=/Game/Unreal_FPS/Core/BP_Character
+MRUItem12=/Game/Unreal_FPS/Core/BP_ChaosCube
+MRUItem13=/Game/Unreal_FPS/Core/FS_MasterField_Bullet
+MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/ABP_AssaultRifle
+MRUItem15=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Fire
+MRUItem16=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire_Aimed
+MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Fire
+MRUItem18=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire
+MRUItem19=/Game/Unreal_FPS/Core/BP_AssaultRifle
+MRUItem20=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
+MRUItem21=/Game/Unreal_FPS/Core/BP_AssaultRifle1
+MRUItem22=/Game/Unreal_FPS/Data/IA_Run
+MRUItem23=/Game/Unreal_FPS/Data/IA_Camera
+MRUItem24=/Game/Unreal_FPS/Data/IA_Movement
+MRUItem25=/Game/Unreal_FPS/Core/GM_FPS
+MRUItem26=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
+MRUItem27=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
+MRUItem28=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
+MRUItem29=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
 
 [AssetEditorToolkitTabLocation]
 /Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin.SKEL_UE5_Mannequin=0
@@ -3689,6 +3691,9 @@ MRUItem29=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_WEP_AssaultRifle_Rel
 /Game/Unreal_FPS/Art/AssaultRifle/Meshes/ABP_AssaultRifle.ABP_AssaultRifle=0
 /Game/Unreal_FPS/Core/FS_MasterField_Bullet.FS_MasterField_Bullet=0
 /Game/Unreal_FPS/Core/BP_ChaosCube.BP_ChaosCube=0
+/Game/Unreal_FPS/Core/BP_Casing.BP_Casing=0
+/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload.AM_FP_AssaultRifle_Reload=0
+/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Reload.AM_FP_WEP_AssaultRifle_Reload=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
