--- a/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Unreal_FPS/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -251,7 +251,7 @@ Advanced=False
 [DetailCustomWidgetExpansion]
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Reload.IA_Reload
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Test.IA_Test,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Reload.IA_Reload,InputMappingContext.Mappings.ActionMappings./Game/Unreal_FPS/Data/IA_Holster.IA_Holster
 InputAction=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 WorldPartitionRuntimeHashSet=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
@@ -261,7 +261,7 @@ CharacterMovementComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_
 K2Node_VariableGet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_VariableSet=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_EnhancedInputAction=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
-K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node_CustomEvent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 K2Node_Variable=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 CameraComponent=BP_Character_C.Physics.ConstraintsGroup,BP_Character_C.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.Inventory
 ABP_Character_C=
@@ -298,7 +298,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Core
+ContentBrowserDrawer.SelectedPaths=/Game/Unreal_FPS/Art/AssaultRifle/Animations
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -308,8 +308,8 @@ ContentBrowserDrawer.ThumbnailSize=3
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Art/AssaultRifle/Animations
-ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
 ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Core
+ContentBrowserDrawer.JumpMRU=/All/Game/Unreal_FPS/Data
 ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine/EditorResources/FieldNodes
 ContentBrowserDrawer.JumpMRU=/All/EngineData
 ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine
@@ -422,17 +422,21 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -448,14 +452,9 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Character.BP_Character
-OpenAssetsAtExit=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload.AM_FP_AssaultRifle_Reload
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/BP_Weapon.BP_Weapon
-OpenAssetsAtExit=/Game/Unreal_FPS/Core/BPI_Weapon.BPI_Weapon
+OpenAssetsAtExit=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Holster.AM_FP_AssaultRifle_Holster
 OpenAssetsAtExit=/Game/Unreal_FPS/Core/ABP_Character.ABP_Character
 
 [DetailPropertyExpansion]
@@ -470,15 +469,15 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" \"Object.Mappings.Mappings.Mappings[9]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[11]\" \"Object.Mappings.Mappings.Mappings[12]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" \"Object.Mappings.Mappings.Mappings[9]\" "
 InputAction="\"Object\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
@@ -3633,36 +3632,36 @@ bPinSoundConcurrencyInAssetMenu=True
 EditingModeActive=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Unreal_FPS/Core/ABP_Character
-MRUItem1=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload
-MRUItem2=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Reload
-MRUItem3=/Game/Unreal_FPS/Core/BPI_Weapon
-MRUItem4=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
-MRUItem5=/Game/Unreal_FPS/Data/IMC_FPS
-MRUItem6=/Game/Unreal_FPS/Core/BP_Bullet
-MRUItem7=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
-MRUItem8=/Game/Unreal_FPS/Core/BP_Weapon
-MRUItem9=/Game/Unreal_FPS/Core/BP_Casing
-MRUItem10=/Game/Unreal_FPS/Core/WBP_PlayerUI
-MRUItem11=/Game/Unreal_FPS/Core/BP_Character
-MRUItem12=/Game/Unreal_FPS/Core/BP_ChaosCube
-MRUItem13=/Game/Unreal_FPS/Core/FS_MasterField_Bullet
-MRUItem14=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/ABP_AssaultRifle
-MRUItem15=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Fire
-MRUItem16=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire_Aimed
-MRUItem17=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Fire
-MRUItem18=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire
-MRUItem19=/Game/Unreal_FPS/Core/BP_AssaultRifle
-MRUItem20=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
-MRUItem21=/Game/Unreal_FPS/Core/BP_AssaultRifle1
-MRUItem22=/Game/Unreal_FPS/Data/IA_Run
-MRUItem23=/Game/Unreal_FPS/Data/IA_Camera
-MRUItem24=/Game/Unreal_FPS/Data/IA_Movement
-MRUItem25=/Game/Unreal_FPS/Core/GM_FPS
-MRUItem26=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Magazine
-MRUItem27=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SM_AssaultRifle_Casing
-MRUItem28=/Game/Unreal_FPS/Art/AssaultRifle/Materials/MI_AssaultRifle
-MRUItem29=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
+MRUItem0=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Holster
+MRUItem1=/Game/Unreal_FPS/Data/IMC_FPS
+MRUItem2=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Equip
+MRUItem3=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Holster
+MRUItem4=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Equip
+MRUItem5=/Game/Unreal_FPS/Core/ABP_Character
+MRUItem6=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload
+MRUItem7=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Reload
+MRUItem8=/Game/Unreal_FPS/Core/BPI_Weapon
+MRUItem9=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Reload
+MRUItem10=/Game/Unreal_FPS/Core/BP_Bullet
+MRUItem11=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/SK_AssaultRifle
+MRUItem12=/Game/Unreal_FPS/Core/BP_Weapon
+MRUItem13=/Game/Unreal_FPS/Core/BP_Casing
+MRUItem14=/Game/Unreal_FPS/Core/WBP_PlayerUI
+MRUItem15=/Game/Unreal_FPS/Core/BP_Character
+MRUItem16=/Game/Unreal_FPS/Core/BP_ChaosCube
+MRUItem17=/Game/Unreal_FPS/Core/FS_MasterField_Bullet
+MRUItem18=/Game/Unreal_FPS/Art/AssaultRifle/Meshes/ABP_AssaultRifle
+MRUItem19=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Fire
+MRUItem20=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire_Aimed
+MRUItem21=/Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Fire
+MRUItem22=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Fire
+MRUItem23=/Game/Unreal_FPS/Core/BP_AssaultRifle
+MRUItem24=/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Idle_Pose
+MRUItem25=/Game/Unreal_FPS/Core/BP_AssaultRifle1
+MRUItem26=/Game/Unreal_FPS/Data/IA_Run
+MRUItem27=/Game/Unreal_FPS/Data/IA_Camera
+MRUItem28=/Game/Unreal_FPS/Data/IA_Movement
+MRUItem29=/Game/Unreal_FPS/Core/GM_FPS
 
 [AssetEditorToolkitTabLocation]
 /Game/Unreal_FPS/Art/Mannequins/Meshes/SKEL_UE5_Mannequin.SKEL_UE5_Mannequin=0
@@ -3694,6 +3693,7 @@ MRUItem29=/Game/Unreal_FPS/Art/AssaultRifle/Materials/M_AssaultRifle
 /Game/Unreal_FPS/Core/BP_Casing.BP_Casing=0
 /Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_AssaultRifle_Reload.AM_FP_AssaultRifle_Reload=0
 /Game/Unreal_FPS/Art/AssaultRifle/Animations/AM_FP_WEP_AssaultRifle_Reload.AM_FP_WEP_AssaultRifle_Reload=0
+/Game/Unreal_FPS/Art/AssaultRifle/Animations/A_FP_AssaultRifle_Holster_Montage.A_FP_AssaultRifle_Holster_Montage=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletonEditor",Commands=)
